# lab3

./: CMakeLists.txt  Game.h  Game_Functions.h  Graphics_elements.h  ISet.h  ISortedSequence.h  ReadBlackTree.h  Start_Game.h  handlers.h  main.cpp  menu.h
Examples/: Examlpe_ISet.h
Tests/: Summary_Tests.h  Tests_ISet.h  Tests_ISortedSequence.h
